fix overflowing x axis (oops)

--- a/docs/app/app.css
+++ b/docs/app/app.css
@@ -7,6 +7,7 @@ html,
 body {
   background-color: var(--color-gray-950);
   color: var(--color-white);
+  overflow-x: hidden;
 }
 button, .btn {
   cursor: pointer;
